docs: fix user upgrade endpoint, change method to get
